--- a/html-css/index.html
+++ b/html-css/index.html
@@ -2,9 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel = "stylesheet" href = "reset.css">
+    <link rel= "stylesheet" href = "styles.css">
     <title>HTML & CSS Part 1</title>
   </head>
 
-  <body></body>
+
+  <body>
+    <header>
+      <div id="logo">Devmountain Daily</div> 
+      <div class="push">Home</div>
+        <div>Topics</div>
+        <div>Sign In</div>
+    </header>
+
+    <main>
+        <h1>Skills Check 2</h1>
+        <p>Lorem ipsum dolo pellentesque elit ullamcorper. Non pulvinar neque laoreet suspendisse interdum consectetur libero. Adipiscing at in tellus integer. Eget duis at tellus at urna condimentum mattis. Amet justo donec enim diam vulputate ut pharetra sit amet. Sapien eget mi proin sed libero enim sed faucibus turpis. Cras pulvinar mattis nunc sed blandit libero. Porttitor lacus luctus accumsan tortor posuere ac ut. Velit sed ullamcorper morbi tincidunt.</p>
+        <br>
+        <p>Est ultricies integer quis auctor. Leo a diam sollicitudin tempor id eu. Orci nulla pellentesque dignissim enim sit amet venenatis urna. Molestie at elementum eu facilisis sed odio. Malesuada fames ac turpis egestas sed tempus urna et. Cursus risus at ultrices mi tempus imperdiet nulla malesuada. Nisl condimentum id venenatis a condimentum vitae sapien pellentesque. Consequat interdum varius sit amet mattis vulputate. Nunc sed id semper risus in hendrerit gravida. A cras semper auctor neque vitae tempus quam pellentesque nec. Tristique risus nec feugiat in. Ligula ullamcorper malesuada proin libero nunc consequat interdum. Varius quam quisque id diam vel quam. Egestas dui id ornare arcu odio ut sem.</p>
+        <br>
+
+        <h3>image gallery</h3>
+      </main>
+  </body>
 </html>
