Friday night push -- Joe

--- a/html-css/index.html
+++ b/html-css/index.html
@@ -11,11 +11,18 @@
 
   <body>
     <header>
-      <div id="logo">Devmountain Daily</div> 
-      <div class="push">Home</div>
-        <div>Topics</div>
-        <div>Sign In</div>
+      <div class="logo">Devmountain Daily</div> 
+        <nav>
+          <ul class="nav-links">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Topics</a></li>
+            <li><a href="#">Subscribe</a></li>
+            <li><a href="#">Sign In</a></li>
+          </ul>
+        </nav>
     </header>
+
+
 
     <main>
         <h1>Skills Check 2</h1>
