more updates --Joe

--- a/html-css/index.html
+++ b/html-css/index.html
@@ -25,13 +25,49 @@
 
 
     <main>
-        <h1>Skills Check 2</h1>
-        <p>Lorem ipsum dolo pellentesque elit ullamcorper. Non pulvinar neque laoreet suspendisse interdum consectetur libero. Adipiscing at in tellus integer. Eget duis at tellus at urna condimentum mattis. Amet justo donec enim diam vulputate ut pharetra sit amet. Sapien eget mi proin sed libero enim sed faucibus turpis. Cras pulvinar mattis nunc sed blandit libero. Porttitor lacus luctus accumsan tortor posuere ac ut. Velit sed ullamcorper morbi tincidunt.</p>
-        <br>
-        <p>Est ultricies integer quis auctor. Leo a diam sollicitudin tempor id eu. Orci nulla pellentesque dignissim enim sit amet venenatis urna. Molestie at elementum eu facilisis sed odio. Malesuada fames ac turpis egestas sed tempus urna et. Cursus risus at ultrices mi tempus imperdiet nulla malesuada. Nisl condimentum id venenatis a condimentum vitae sapien pellentesque. Consequat interdum varius sit amet mattis vulputate. Nunc sed id semper risus in hendrerit gravida. A cras semper auctor neque vitae tempus quam pellentesque nec. Tristique risus nec feugiat in. Ligula ullamcorper malesuada proin libero nunc consequat interdum. Varius quam quisque id diam vel quam. Egestas dui id ornare arcu odio ut sem.</p>
-        <br>
+        <aside>
+          <section>
+            <article>
+              Skills Check 2
+              <p>Lorem ipsum dolo pellentesque elit ullamcorper. Non pulvinar neque laoreet suspendisse interdum consectetur libero. Adipiscing at in tellus integer. Eget duis at tellus at urna condimentum mattis. Amet justo donec enim diam vulputate ut pharetra sit amet. Sapien eget mi proin sed libero enim sed faucibus turpis. Cras pulvinar mattis nunc sed blandit libero. Porttitor lacus luctus accumsan tortor posuere ac ut. Velit sed ullamcorper morbi tincidunt.</p>
+              <br>
+              <p>Est ultricies integer quis auctor. Leo a diam sollicitudin tempor id eu. Orci nulla pellentesque dignissim enim sit amet venenatis urna. Molestie at elementum eu facilisis sed odio. Malesuada fames ac turpis egestas sed tempus urna et. Cursus risus at ultrices mi tempus imperdiet nulla malesuada. Nisl condimentum id venenatis a condimentum vitae sapien pellentesque. Consequat interdum varius sit amet mattis vulputate. Nunc sed id semper risus in hendrerit gravida. A cras semper auctor neque vitae tempus quam pellentesque nec. Tristique risus nec feugiat in. Ligula ullamcorper malesuada proin libero nunc consequat interdum. Varius quam quisque id diam vel quam. Egestas dui id ornare arcu odio ut sem.</p>
+              <br>
+              <p>Non pulvinar neque laoreet suspendisse interdum consectetur libero. Leo a diam sollicitudin tempor id eu.  Non pulvinar neque laoreet suspendisse interdum consectetur libero. Adipiscing at in tellus integer. Eget duis at tellus at urna condimentum mattis.</p>
+            </article>
 
-        <h3>image gallery</h3>
+            <image gallery>
+              Image Gallery
+            </image>
+
+          </section>
+          <!-- <gallery>
+            Image Gallery
+          </gallery> -->
+        </aside>
+
+
+        <aside>
+          <section>
+            <div class="profile"><h2>Your Name</h2>
+
+            </div>
+            <ol>Popular Articles
+             <li>JavaScript3</li>
+             <li> CSS Tips</li>
+             <li> Array Methods</li>
+             <li>HTML</li>
+            </ol>
+          </section>
+        </aside>
+
+
+      
       </main>
+
+
+      <footer>
+        Learn to Code at Devmountain
+      </footer>
   </body>
 </html>
